--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>Крестики-нолики</h1>
     <script type="module" src="/js.js"></script>
     <script type="module" src="/fieldRendering.js"></script>
+    <script type="module" src="/setValue.js"></script>
 </body>
 </html>
