all methods in anothers folders

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <script type="module" src="/js.js"></script>
     <script type="module" src="/fieldRendering.js"></script>
     <script type="module" src="/setValue.js"></script>
+    <script type="module" src="/checkWinner.js"></script>
+    <script type="module" src="/result.Window.js"></script>
 </body>
 </html>
